remove first name and last name from user registered service
