# app/Models/User.php
@@ -271,9 +271,7 @@ class User extends Model implements AuthenticatableContract, AuthorizableContrac
             'phone' => $request->phone,
             'password' => Hash::make($request->password),
             'uid' => md5(microtime()),
-            'device_token' => $request->device_token,
-            'firstName' =>$request->firstName,
-            'lastName' =>$request->lastName,
+            'device_token' => $request->device_token
         ]);
         $user_id = $user['id'];
         $user->profile()->create(['user_id'=>$user_id]);
